--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,25 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/index.mjs",
-      "use": "@vercel/node"
-    }
-  ],
-  "buildCommand": "npx prisma generate",
-  "rewrites": [
-    {
-      "source": "/api/v1/(.*)",
-      "destination": "src/index.mjs"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        },
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,DELETE,PATCH,POST,PUT"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+    "version": 2,
+    "builds": [
+      {
+        "src": "src/index.mjs",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/v1/(.*)",
+        "dest": "src/index.mjs",
+        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
+          "Access-Control-Allow-Credentials": "true"
         }
-      ]
-    }
-  ]
-}
+      },
+      {
+        "src": "/(.*)",
+        "dest": "src/index.mjs"
+      }
+    ]
+  }
