--- a/vercel.json
+++ b/vercel.json
@@ -8,18 +8,9 @@
     ],
     "routes": [
       {
-        "src": "/api/v1/(.*)",
-        "dest": "src/index.mjs",
-        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
-        "headers": {
-          "Access-Control-Allow-Origin": "*",
-          "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
-          "Access-Control-Allow-Credentials": "true"
-        }
-      },
-      {
         "src": "/(.*)",
-        "dest": "src/index.mjs"
+        "dest": "src/index.mjs",
+        "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"]
       }
     ]
   }
